Deployed again Openwhisk in order to disable kafka provider and setup an external CouchDB instance for it. Successfully deployed a Mosquitto MQTT broker for a kubernetes cluster and tried to publish/subscribe. Deployed an Openwhisk trigger which is fired when a message is published on a certain MQTT topic. Succesfully fired Azure Functions after publishing a message on the IoT Hub with a fake device.

--- a/openwhisk/traefik-master/configs/traefik.toml
+++ b/openwhisk/traefik-master/configs/traefik.toml
@@ -33,6 +33,14 @@
 [entryPoints.internal]
   address = ":9000"
 
+[entryPoints.mqtt]
+  address = ":8883"
+  [entryPoints.mqtt.http.tls]
+  {{- if .Values.traefik.letsencrypt }}
+    certResolver = "letsencrypt"
+  {{- end }}
+
+
 [accessLog]
   filePath = "/var/log/access.log"
 
