--- a/openwhisk/traefik-master/values.yaml
+++ b/openwhisk/traefik-master/values.yaml
@@ -28,6 +28,10 @@ traefik:
       port: 80
     secure:
       port: 443
+    mqtt:
+      port: 1883
+
+  
 
 # ========== ========== ========== ========== ==========
 metrics:
