--- a/openwhisk/deploy/edge/values.yaml
+++ b/openwhisk/deploy/edge/values.yaml
@@ -41,11 +41,11 @@ openwhisk:
         timeoutSeconds: 1000
     controller:
       livenessProbe:
-        initialDelaySeconds: 100
+        initialDelaySeconds: 200
         periodSeconds: 10
         timeoutSeconds: 1000
       readinessProbe:
-        initialDelaySeconds: 100
+        initialDelaySeconds: 200
         periodSeconds: 10
         timeoutSeconds: 1000
     kafka:
@@ -59,13 +59,50 @@ openwhisk:
         timeoutSeconds: 1000
     invoker:
       livenessProbe:
-        initialDelaySeconds: 100
+        initialDelaySeconds: 200
         periodSeconds: 10
         timeoutSeconds: 1000
       readinessProbe:
-        initialDelaySeconds: 100
+        initialDelaySeconds: 200
         periodSeconds: 10
         timeoutSeconds: 1000
+        #metrics:
+    # set true to enable prometheus exporter
+  # prometheusEnabled: true
+  # passing prometheus-enabled by a config file, required by openwhisk
+  #whiskconfigFile: "whiskconfig.conf"
+  # set true to enable Kamon
+  #kamonEnabled: true
+  # set true to enable Kamon tags
+  #kamonTags: true
+  # set true to enable user metrics
+  #userMetricsEnabled: true
+
+  limits:
+    actionsInvokesPerminute: 2000
+    actionsInvokesConcurrent: 1000
+    triggersFiresPerminute: 2000
+    actionsSequenceMaxlength: 50
+    actions:
+      time:
+        min: "100ms"
+        max: "5m"
+        std: "1m"
+      memory:
+        min: "128m"
+        max: "512m"
+        std: "256m"
+      concurrency:
+        min: 1
+        max: 2000
+        std: 1
+      log:
+        min: "0m"
+        max: "10m"
+        std: "10m"
+    activation:
+      payload:
+        max: "1048576"
 mosquitto:
   # Default values for mosquitto.
 
@@ -88,7 +125,7 @@ mosquitto:
       - username: test
         # "test" password in sha512-pbkdf2 format, generated with mosquitto_passwd
 
-        password: ""
+        password: $6$WgoRASWRnPePPq4Q$Q6g58x1Gf2mcoC/H1hOlm3Zml2dPyKGhqrmtU8fjjLr1/20Ddi+lm46zp4fqO+wgquXp8QHJLq/gW54h+KU7dw==
         # acl:
   #  - topic: "#"
 
@@ -156,8 +193,8 @@ mosquitto:
   nodeSelector: {}
   tolerations: []
   affinity: {}
+mqtt-provider:
   provider:
-    enabled: true
     providerPort: "3000"
     couchdbUsername: admin
     couchdbPassword: admin
@@ -292,7 +329,7 @@ influxdb2:
   ##
   adminUser:
     organization: influxdata
-    bucket: "http://openwhisk-influxdb2:80"
+    bucket: "measure"
     user: "admin"
     retention_policy: "0s"
     ## Leave empty to generate a random password and token.
