--- a/openwhisk/deploy/helm-charts/chartmuseum-charts/central-chart/values.yaml
+++ b/openwhisk/deploy/helm-charts/chartmuseum-charts/central-chart/values.yaml
@@ -711,3 +711,13 @@ couchdb:
   iroute:
     enabled: true
     gateway: couchdb-gateway.liquidfaas.cloud
+mqtt-provider:
+  provider:
+    enabled: true
+    providerPort: "3000"
+    couchdbUsername: admin
+    couchdbPassword: admin
+    couchdbGateway: "couchdb-gateway.liquidfaas.cloud"
+    couchdbExtPort: "443"
+  openwhisk:
+    apiHost: "38.242.158.232"
